--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^10.7.0
+  font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
   go_router: ^14.3.0
   smooth_page_indicator: ^1.2.0+3
+  flutter_verification_code: ^1.1.7
+  pinput: ^5.0.0
+  curved_navigation_bar: ^1.0.6
+
+
 
 
 
