--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_verification_code: ^1.1.7
   pinput: ^5.0.0
   curved_navigation_bar: ^1.0.6
+  sleek_circular_slider: ^2.0.1
+  easy_stepper: ^0.8.5+1
 
 
 
