finished quran and hadith view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   sleek_circular_slider: ^2.0.1
   easy_stepper: ^0.8.5+1
+  dio: ^5.7.0
+  flutter_bloc: ^8.1.6
+  dartz: ^0.10.1
+  get_it: ^8.0.2
 
 
 
