--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   flutter_bloc: ^8.1.6
   dartz: ^0.10.1
   get_it: ^8.0.2
-
+  hijri: ^3.0.0
+  intl: ^0.20.0
+  url_launcher: ^6.3.1
+  webview_flutter: ^4.10.0
 
 
 
@@ -62,7 +65,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-
+  intl_translation: ^0.20.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
