finished khotab books,religion lessons audio and video view and fetch there data

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         </intent>
     </queries>
     <application
+        android:usesCleartextTraffic="true"
         android:label="owli_aleazm"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
