--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,10 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^8.0.2
   hijri: ^3.0.0
-  intl: ^0.20.0
   url_launcher: ^6.3.1
-  webview_flutter: ^4.10.0
+  islamic_hijri_calendar: ^0.0.4
+  video_player: ^2.9.2
+  just_audio: ^0.9.42
 
 
 
