--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,11 @@ dependencies:
   islamic_hijri_calendar: ^0.0.4
   video_player: ^2.9.2
   just_audio: ^0.9.42
-
-
-
+  shared_preferences: ^2.3.3
+  intl:
+  firebase_core:
+  firebase_auth:
+  modal_progress_hud_nsn: ^0.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
